# learning

.github/workflows/: README.md  e2e-tests.yml  e2e-tests.yml.archive
gpu_req/: Cargo.toml
gpu_req/src/: main.rs
gpui/: AGENTS.md  CLAUDE.md  Cargo.toml  Cargo.toml.bak
gpui/.claude/: ralph-loop.local.md
gpui/Legacy/: AGENTS.md  Cargo.toml  README.md  request.json  request_post.json
gpui/Legacy/.reqforge/collections/: dafc9f0d-52d8-415a-9901-a0637f6f5ecb.json
gpui/Legacy/crates/input-test/: Cargo.toml
gpui/Legacy/crates/input-test/src/: main.rs
gpui/Legacy/crates/reqforge-app/: Cargo.toml
gpui/Legacy/crates/reqforge-app/src/: app_state.rs  main.rs
gpui/Legacy/crates/reqforge-app/src/ui/: key_value_editor.rs  request_editor.rs  response_viewer.rs  root.rs  sidebar.rs
gpui/Legacy/crates/reqforge-cli/: Cargo.toml
gpui/Legacy/crates/reqforge-cli/src/: main.rs
gpui/Legacy/crates/reqforge-core/: Cargo.toml
gpui/Legacy/crates/reqforge-core/src/: integration_tests.rs  validation.rs
gpui/Legacy/crates/reqforge-core/src/env/: resolver.rs
gpui/Legacy/crates/reqforge-core/src/http/: client.rs  mod.rs
gpui/Legacy/crates/reqforge-core/src/import_export/: error.rs  formats.rs
gpui/Legacy/crates/reqforge-core/src/import_export/formats/: openapi.rs  postman.rs
gpui/Legacy/crates/reqforge-core/src/models/: folder.rs  template.rs
gpui/Legacy/crates/reqforge-core/src/store/: json_store.rs  json_store_tests.rs  mod.rs  persistence.rs
gpui/Legacy/crates/reqforge-core/src/templates/: builtin.rs  mod.rs
gpui/Legacy/data/collections/: simple.json
gpui/Legacy/docs/: getting-started-workflow.md  plan.md  zerocopy.md
gpui/Legacy/examples/: complex-request.json
gpui/crates/reqforge-app/: Cargo.toml
gpui/crates/reqforge-app/src/: app_state.rs  bridge.rs  lib.rs  main.rs
gpui/crates/reqforge-app/src/ui/: body_editor.rs  env_editor_modal.rs  env_selector.rs  key_value_editor.rs  mod.rs  request_editor.rs  response_viewer.rs  root.rs  sidebar.rs  tab_bar.rs
gpui/crates/reqforge-cli/src/: main.rs
gpui/crates/reqforge-core/: Cargo.toml
gpui/crates/reqforge-core/src/: history.rs  import_export.rs  integration_tests.rs  lib.rs
gpui/crates/reqforge-core/src/env/: interpolator.rs  mod.rs  variables.rs
gpui/crates/reqforge-core/src/http/: client.rs  client_tests.rs
gpui/crates/reqforge-core/src/import_export/: formats.rs
gpui/crates/reqforge-core/src/import_export/formats/: manifest.rs
gpui/crates/reqforge-core/src/models/: collection.rs  environment.rs  history.rs  mod.rs  request.rs  response.rs
gpui/data/: environments.json
gpui/data/collections/: api-example.json
gpui/docs/: fix-missing-features.md  gpui-component-plan.md  interactivity-plan.md  plan.md  wire-components-plan.md
gpui/examples/: basic-get-request.json  form-post-request.json  json-post-request.json  usage-guide.md
icewow/: CLAUDE.md  Cargo.toml  fixes.md  plan.md
icewow/engine/: Cargo.toml
icewow/src/: app.rs  main.rs  model.rs  tree_ops.rs
ide/: Cargo.toml
ide/src/: main.rs
otel/: .gitignore  Cargo.toml  docker-compose.yml  prometheus.yml
otel/docs/: api-testing.md  plan.md
otel/migration/: Cargo.toml
otel/migration/src/: lib.rs  m20250101_000001_create_todos_table.rs
otel/src/: cache.rs  config.rs  handlers.rs  health.rs  main.rs  telemetry.rs
otel/src/entity/: todo.rs
tauri-app/: README.md  instructions.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  wdio.android.conf.ts  wdio.conf.ts  wdio.macos.conf.ts
tauri-app/docs/: TAURI_CAPABILITY_PLAYGROUND_PLAN.md  alarms-module.md  app-lifecycle-module.md  background-tasks-module.md  calendar-module.md  camera-module.md  clipboard-module.md  contacts-module.md  deep-linking-module.md  (+19 more)
(+90 files in other folders)
