[workspace]
resolver = "2"
members = [
    "crates/reqforge-core",
    "crates/reqforge-app",
    "crates/reqforge-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "query", "form"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1.12.2"
thiserror = "2.0.17"
url = "2.5"
