[package]
name = "otel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
redis = "0.32.7"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-prometheus = "0.31.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum-extra = { version = "0.10.6", features = ["typed-header"] }
metrics = "0.24.1"
prometheus = "0.13.4"
tracing-opentelemetry = "0.29.0"
sea-orm-migration = "1.1.17"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
reqwest = { version = "0.12.9", features = ["json"] }
migration = { path = "./migration" }
