[package]
name = "reqforge-app"
version.workspace = true
edition.workspace = true

[lib]
name = "reqforge_app"
path = "src/lib.rs"

[[bin]]
name = "reqforge-app"
path = "src/main.rs"

[dependencies]
reqforge-core = { path = "../reqforge-core" }
gpui-component = "0.5"
gpui = "0.2"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
bytes.workspace = true
chrono.workspace = true
log.workspace = true
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
