[package]
name = "reqforge-core"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
thiserror.workspace = true
url.workspace = true
bytes.workspace = true
zip = "2.2"

[dev-dependencies]
wiremock = "0.6.5"
tokio-test = "0.4"
tempfile = "3"
